style.css
body {margin:0px;}
.box {
display: block;
float: left;
height: 100px;
background: white;
margin: 10px;
border: 1px solid #ddd;
font-family: arial;
font-size: 12px;
color: #777;
padding: 12px;
padding-bottom: 6px;cursor:pointer;
}
.box:hover {
	border: 1px solid #999;
}
.boximage {
	width:auto;
}

.product_title{
font-size: 12px;
display: block;
margin: auto;
margin-bottom: -12px;
text-align: left;
}
.tag
{height:30px;}
.oneofakind {
background: #D9BD8D;
padding: 3px;
margin: 4px;
border-radius: 2px;
border: 1px solid #B88E46;
display: inline-block;
margin-left: 0px;
color: white;
padding-bottom: 2px;
text-transform: uppercase;
font-size:11px;
}
.lastchance {
background: #89C1C4;
padding: 3px;
margin: 4px;
border-radius: 2px;
border: 1px solid #5EB1B5;
display: inline-block;
margin-left: 0px;
color: white;
padding-bottom: 2px;
text-transform: uppercase;
font-size:11px;
}
.boximage {
	max-width:200px;
	max-height:200px;
}
.price {
color: #aaa;
font-size: 10px;
float: right;
margin-right: 3px;
}
#tall, #mini, #hideprice, #showprice, #square, #ooak, #x, #page1button, #page2button, #paginationshowall, #lastchance {
	display: block;
float: left;
height: 50px;
width: 100px;
border-radius: 8px;
background: #eee;
margin: 3px;
height: 13px;
padding: 4px;
text-align: center;
text-transform: uppercase;
font-family: arial;
font-size: 11px;
color: #999;cursor:pointer;
border:1px solid #ddd;
}

#tall:hover, #mini:hover, #hideprice:hover, #showprice:hover, #square:hover, #ooak:hover, #x:hover, #page1button:hover, #page2button:hover, #paginationshowall:hover, #lastchance:hover {
background:#fafafa;
border:1px solid #eee;
}

#page1button,#page2button {
width:30px;
float:none;
display:inline-block;
}
.sortinglabel{
	display: block;
float: left;
height: 26px;
font-family: 11px;
font-family: arial;
font-size: 12px;
margin-right: 7px;
padding: 6px;
color: #aaa;
letter-spacing: 0px;
margin-left: 16px;
}

#objectWrapper {
	width: 984px;
	margin: auto;
	background: white;}
#buttonswrap {
	width:auto;
	height:40px;
}
#header {
cursor: pointer;
border-bottom: 1px solid #eee;
margin: auto;
text-align: center;
background: #444;
margin-bottom: 9px;
width: 100%;
}
#footer
{
background: #444;
height:400px;
}
#footerwrap{
	width:900px;
	margin:auto;
height:400px;}
.footercols {
width: 264px;
font-family: sans-serif;
float: left;
height: 400px;
margin: 18px;
font-size: 13px;
color: #ccc;
line-height: 28px;
text-align:justify;
}

.footercols dl {color:white;}
.footercols h1 {
	color: #aaa;
font-family: 'Cinzel', serif;
font-weight: 100;
}
#pagination
{
	height: 50px;
width: 131px;
margin: auto;
}
.pressed {
	background:#777 !important;
	color:#fff !important;
}

